--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -30,7 +30,7 @@
                 {
                     echo "<header class='content-title'>
                             <h2 class='title'>Ofertas Especiales</h2>
-                            <p class='title-desc'>Save your money and time with our store. Here's the best part of our impressive assortment.</p>
+                            <p class='title-desc'>Guarda tu tiempo y dinero. En nuestra tienda encontraras ofertas de locura</p>
                          </header>
 
                         <div id='products-tabs-content' class='row'>";
