--- a/module/Application/view/application/cart/viewcart.phtml
+++ b/module/Application/view/application/cart/viewcart.phtml
@@ -4,14 +4,14 @@
     <?php echo $this->total_items ?> item(s) <span class="drop-price">- <?php echo "$".number_format($this->total_sum) ?></span>
     </button>
     <div class="dropdown-menu dropdown-cart-menu pull-right clearfix" role="menu">
-        <p class="dropdown-cart-description">Recently added item(s).</p>
+        <p class="dropdown-cart-description">Item(s) recientemente agregados.</p>
         <ul class="dropdown-cart-product-list">
             <?php 
             if (count($this->cart)> 0) {
                 foreach ($this->cart  as $token =>$producto) 
                 {
                     echo "<li class='item clearfix'>
-                            <a style='cursor:pointer' onclick=\"usar_ajax('".$this->basePath()."/application/cart/delete-to-cart','#zoneCart','token=".$token."')\" title='Delete item' class='delete-item'><i class='fa fa-times'></i></a>
+                            <a style='cursor:pointer' onclick=\"eliminarProductoCart('".$token."','".$this->basePath()."')\" title='Delete item' class='delete-item'><i class='fa fa-times'></i></a>
                             <a href='#' title='Edit item' class='edit-item'><i class='fa fa-pencil'></i></a>
                             <figure>
                                <a href='product.html'><img src='".$producto->getImgUrl()."' alt='".$producto->getProduct()."'></a>
