--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -75,7 +75,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                            
                            <!-- End .header-top-dropdowns -->
                            <div class="header-text-container pull-right">
-                              <p class="header-text">Welcome to Venedor!</p>
+                              <p class="header-text">Bienvenido a vendor!</p>
                               <?php 
                                     if (isset($_SESSION['user']['username'])) {
                                         echo "<p class='header-link'>".$_SESSION['user']['username']."</p>"
@@ -219,72 +219,13 @@ if (defined('RUNNING_FROM_ROOT')) {
                                     </ul>
                                  </li>
                                  <li>
-                                    <a href="#">Portfolio</a>
-                                    <ul>
-                                       <li>
-                                          <a href="#">Classic</a>
-                                          <ul>
-                                             <li><a href="portfolio-2.html">Two Columns</a></li>
-                                          </ul>
-                                       </li>
-                                       <li>
-                                          <a href="#">Masonry</a>
-                                          <ul>
-                                             <li><a href="portfolio-masonry-2.html">Two Columns</a></li>
-                                          </ul>
-                                       </li>
-                                       <li>
-                                          <a href="#">Portfolio Posts</a>
-                                          <ul>
-                                             <li><a href="single-portfolio.html">Image Post</a></li>
-                                          </ul>
-                                       </li>
-                                    </ul>
-                                 </li>
-                                 <li>
                                     <a href="#">Lista de Precios</a>
                                  </li>
                                  <li><a href="<?php echo $this->basePath()?>/contactanos">Contactenos</a></li>
                               </ul>
                            </nav>
                            <div id="quick-access">
-                              <div class="dropdown-cart-menu-container pull-right" id='zoneCart'>
-                                 <div class="btn-group dropdown-cart">
-                                    <button type="button" class="btn btn-custom dropdown-toggle" data-toggle="dropdown">
-                                    <span class="cart-menu-icon" id="itemsCart"></span>
-                                    0 item(s) <span class="drop-price">- $0.00</span>
-                                    </button>
-                                    <div class="dropdown-menu dropdown-cart-menu pull-right clearfix" role="menu">
-                                       <p class="dropdown-cart-description">Recently added item(s).</p>
-                                       <ul class="dropdown-cart-product-list">
-                                          <li class="item clearfix">
-                                             <a href="#" title="Delete item" class="delete-item"><i class="fa fa-times"></i></a>
-                                             <a href="#" title="Edit item" class="edit-item"><i class="fa fa-pencil"></i></a>
-                                             <figure>
-                                                <a href="product.html"><img src="<?php echo $this->basePath() ?>/images/products/thumbnails/item12.jpg" alt="phone 4"></a>
-                                             </figure>
-                                             <div class="dropdown-cart-details">
-                                                <p class="item-name"><a href="product.html">Cam Optia AF Webcam </a></p>
-                                                <p>1x<span class="item-price">$499</span></p>
-                                             </div>
-                                             <!-- End .dropdown-cart-details -->
-                                          </li>
-                                       </ul>
-                                       <ul class="dropdown-cart-total">
-                                          <li><span class="dropdown-cart-total-title">Shipping:</span>$7</li>
-                                          <li><span class="dropdown-cart-total-title">Total:</span>$1005<span class="sub-price">.99</span></li>
-                                       </ul>
-                                       <!-- .dropdown-cart-total -->
-                                       <div class="dropdown-cart-action">
-                                          <p><a href="cart.html" class="btn btn-custom-2 btn-block">Cart</a></p>
-                                          <p><a href="checkout.html" class="btn btn-custom btn-block">Checkout</a></p>
-                                       </div>
-                                       <!-- End .dropdown-cart-action -->
-                                    </div>
-                                    <!-- End .dropdown-cart -->
-                                 </div>
-                                 <!-- End .btn-group -->
-                              </div>
+                              <div class="dropdown-cart-menu-container pull-right" id='zoneCart'></div>
                               <!-- End .dropdown-cart-menu-container -->
                               <form class="form-inline quick-search-form" role="form" method="get" name="bla"  action="<?php echo str_replace("/public","", $this->basePath()) ?>/buscar">
                                  <div class="form-group">
@@ -420,14 +361,6 @@ if (defined('RUNNING_FROM_ROOT')) {
                         </div><!-- End .widget -->
                         
                         <div class="clearfix visible-sm"></div>
-                        
-                        <div class="col-md-3 col-sm-12 col-xs-12 widget">
-                            <h3>FACEBOOK LIKE BOX</h3>
-                            
-                            <div class="facebook-likebox">
-                                <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fenvato&amp;colorscheme=dark&amp;show_faces=true&amp;header=false&amp;stream=false&amp;show_border=false"></iframe>
-                            </div>
-                        </div><!-- End .widget -->
                     </div><!-- End .row -->
                 </div><!-- End .container -->
             
