--- a/module/Admin/view/admin/pedido-venta/autorizar.phtml
+++ b/module/Admin/view/admin/pedido-venta/autorizar.phtml
@@ -53,81 +53,85 @@ if ($this->validacion != null) {
             <div class="box-body">
                 <?php echo $this->form()->openTag($form);
                       echo $this->formElement($form->get('idPedidoVenta'));?>
-                    <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Número Pedído</label>
-                        </div>
-                        <div class="col-lg-2 col-md-3 col-sm-4">
-                            <?php echo $this->formInput($form->get('numeroPedido'));?>
-                        </div>  
+                <div class="form-group">
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">Número Pedído</label>
                     </div>
-                    <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Cliente</label>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-5">
-                            <?php echo $this->formInput($form->get('nombreCliente'));?>  
-                        </div>
+                    <div class="col-lg-2 col-md-3 col-sm-4">
+                        <?php echo $this->formInput($form->get('numeroPedido'));?>
+                    </div>  
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-1 col-md-2 col-sm-3">
+                        <label for="email1" class="control-label">Cliente</label>
                     </div>
-                     <div class="form-group">
-                        <div class="col-lg-1 col-md-2 col-sm-3">
-                            <label for="email1" class="control-label">Documento Pago</label>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-5">
-                             <?php echo $this->formElement($form->get('image-file'));?>   
-                            <p class="help-block">Escanee el documento de pago.</p>
-                        </div>
+                    <div class="col-lg-3 col-md-4 col-sm-5">
+                        <?php echo $this->formInput($form->get('nombreCliente'));?>  
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                                <div class="box box-outlined style-primary1">
-                                    <div class="box-head">
-                                        <header><h4 class="text-light"><i class="fa fa-fw  fa-list"></i> Pedido <strong>Detalle</strong></h4></header>
-                                    </div>
-                                    <div class="box-body" style="display: block;">
-                                        <div class="table-responsive no-margin">
-                                            <table class="table table-striped no-margin">
-                                                <thead>
-                                                    <tr>
-                                                        <th>#</th>
-                                                        <th>Producto</th>
-                                                        <th>Cantidad</th>
-                                                        <th>Valor Venta</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <?php 
-                                                    if (count($this->PedidoVentaPosicion) > 0) 
-                                                    {
-                                                        $i = 1;
-                                                        foreach ($this->PedidoVentaPosicion as $posicion) 
-                                                        {
-                                                            echo "<tr>"
-                                                            . "<td>$i</td>"
-                                                            . "<td>".$posicion->getNombreProducto()."</td>"
-                                                            . "<td>".number_format($posicion->getCantidad())."</td>"
-                                                            . "<td>$".number_format($posicion->getValorVenta())."</td></tr>";
-                                                            $i++;
-                                                        }
-                                                    }
-                                                    ?>
-                                                    <tr>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                    </div>
-                                    </div>
+                </div>
+                <div class="form-group">
+                   <div class="col-lg-1 col-md-2 col-sm-3">
+                       <label for="email1" class="control-label">Documento Pago</label>
+                   </div>
+                   <div class="col-lg-3 col-md-4 col-sm-5">
+                        <?php echo $this->formElement($form->get('image-file'));?>   
+                       <p class="help-block">Escanee el documento de pago.</p>
+                   </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="box box-outlined style-primary1">
+                            <div class="box-head">
+                                <header><h4 class="text-light"><i class="fa fa-fw  fa-list"></i> Pedido <strong>Detalle</strong></h4></header>
+                            </div>
+                            <div class="box-body" style="display: block;">
+                                <div class="table-responsive no-margin">
+                                    <table class="table table-striped no-margin">
+                                        <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Producto</th>
+                                                <th>Proveedor</th>
+                                                <th>Cantidad</th>
+                                                <th>Valor Unitario</th>
+                                                <th>Valor Total</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <?php 
+                                            if (count($this->PedidoVentaPosicion) > 0) 
+                                            {
+                                                $i = 1;
+                                                foreach ($this->PedidoVentaPosicion as $posicion) 
+                                                {
+                                                    echo "<tr>"
+                                                    . "<td>$i</td>"
+                                                    . "<td>".$posicion->getNombreProducto()."</td>"
+                                                    . "<td>".$posicion->getNombreProveedor()."</td>"
+                                                    . "<td>".number_format($posicion->getCantidad())."</td>"
+                                                    . "<td>$".number_format($posicion->getValorVenta())."</td>"
+                                                    . "<td>$".number_format($posicion->getCantidad() * $posicion->getValorVenta())."</td></tr>";
+                                                    $i++;
+                                                }
+                                            }
+                                            ?>
+                                            <tr>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
-                        </div><!--end .col-lg-6 -->
-                    </div>
-                    <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
-                        <?php echo $this->formElement($form->get('btnAutorizar'));?>  
-                        <?php echo $this->formElement($form->get('btnCancelar'));?> 
-                    </div>
+                            </div>
+                        </div>
+                    </div><!--end .col-lg-6 -->
+                </div>
+                <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
+                    <?php echo $this->formElement($form->get('btnAutorizar'));?>  
+                    <?php echo $this->formElement($form->get('btnCancelar'));?> 
+                </div>
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
