--- a/module/Admin/view/admin/pedido-venta/solicitud.phtml
+++ b/module/Admin/view/admin/pedido-venta/solicitud.phtml
@@ -17,20 +17,25 @@ if ($this->numeroPedido != null) {
     function AddRow()
     {
         numRows++;
-        var parametrosGet = "?campoId=idSaldoInventario" + numRows + "&campoNombre=nombreProducto" + numRows + "&campoIdProducto=hidIdProducto" + numRows;
-        parametrosGet += "&campoValorVenta=hidValorVenta" + numRows + "&campoCantidad=hidCantidad" + numRows;
-        var onClick = "onclick=\"showBusquedaOnModal(this,'<?php echo $this->basePath() ?>/admin/saldoinventario/buscar" + parametrosGet + "','')\"";
+        var parametrosGet = "?campoId=idSaldoInventario" + numRows + "&campoNombre=nombreProducto" + numRows + "&campoIdProducto=hidProducto" + numRows;
+        parametrosGet += "&campoValorVenta=hValorVenta" + numRows + "&campoCantidad=stock" + numRows;
+        var onClick = "onclick=\"if($('#idCliente').val()== '')\n\
+                                {showMessaginfo('','Favor seleccionar el Cliente');} \n\
+                            else { showBusquedaOnModal(this,'<?php echo $this->basePath() ?>/admin/saldoinventario/buscar" + parametrosGet + "','')}\"";
         var cadena = "<tr id='pedidoVentaPosicion" + numRows + "'>";
         cadena += "<td>" + numRows + "</td>";
         cadena += "<td><div class='col-lg-8 col-md-4 col-sm-4'>";
         cadena += "<input class='form-control' id='idSaldoInventario" + numRows + "' name='idSaldoInventario" + numRows + "' type='hidden'>";
-        cadena += "<input class='form-control' id='hidIdProducto" + numRows + "' name='hidIdProducto" + numRows + "' type='hidden'>";
-        cadena += "<input class='form-control' id='hidValorVenta" + numRows + "' name='hidValorVenta" + numRows + "' type='hidden'>";
-        cadena += "<input class='form-control' id='hidCantidad" + numRows + "' name='hidCantidad" + numRows + "' type='hidden'>";
+        cadena += "<input class='form-control' id='hidProducto" + numRows + "' name='hidProducto" + numRows + "' type='hidden'>";
+        cadena += "<input class='form-control' id='hValorVenta" + numRows + "' name='hValorVenta" + numRows + "' type='hidden'>";
+        //cadena += "<input class='form-control' id='hCantidad" + numRows + "' name='hCantidad" + numRows + "' type='hidden'>";
         cadena += "<input class='form-control' id='nombreProducto" + numRows + "' type='text' required='required' onkeypress='return false'></div>";
         cadena += "<input type='button' " + onClick + " data-target='#textModal' data-toggle='modal' style='margin:2px' class='btn btn-support2' value='Buscar'></td>";
-        
+        // Input Stock
+        cadena += "<td><input name=\"stock"+numRows+"\" id=\"stock"+numRows+"\" type='text' class='form-control' readonly></td>";
+        // Input Cantidad
         cadena += "<td><input name=\"cantidad" + numRows + "\" id=\"cantidad" + numRows + "\" type='text' required='required' placeholder='Cantidad' maxlength='9' class='form-control' onkeyup=\"totalRow("+ numRows +")\" onkeypress=\"return validarTecla(event,'num')\"></td>";
+        // Input ValorVenta
         cadena += "<td><input name=\"valorVenta" + numRows + "\" id=\"valorVenta" + numRows + "\" type='text' required='required' placeholder='Valor Venta' maxlength='20' readonly class='form-control' onkeypress=\"return validarTecla(event,'num')\"></td>";
         cadena += "<td><a class='btn btn-danger' onclick=\"$('#pedidoVentaPosicion" + numRows + "').remove()\"><i class='fa  fa-minus-square'></i></a></td></tr>";
         $('#tBodyPedido').append(cadena);
@@ -39,8 +44,8 @@ if ($this->numeroPedido != null) {
     function totalRow(numRows){
         
         var cantidad = $("#cantidad" + numRows).val();
-        var valorVenta = $("#hidValorVenta" + numRows).val()
-        var cantidadActual = $("#hidCantidad" + numRows).val();
+        var valorVenta = $("#hValorVenta" + numRows).val()
+        var cantidadActual = $("#stock" + numRows).val();
         var total = 0;
         if(cantidad != "" && valorVenta != "" && cantidadActual != ""){
             
@@ -104,14 +109,14 @@ if ($this->numeroPedido != null) {
                 <?php echo $this->form()->openTag($form);
                 echo $this->formElement($form->get('idCliente'));
                 ?>
-                <div class="form-group">
+                <!--div class="form-group">
                     <div class="col-lg-1 col-md-2 col-sm-3">
                         <label for="email1" class="control-label">Número Pedido</label>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-4">
                         <?php echo $this->formInput($form->get('numeroPedido')); ?>
                     </div>
-                </div>
+                </div-->
                 <div class="form-group">
                     <div class="col-lg-1 col-md-2 col-sm-3">
                         <label for="email1" class="control-label">Cliente</label>
@@ -121,16 +126,6 @@ if ($this->numeroPedido != null) {
                     </div>
                     <?php echo $this->formElement($form->get('btnBuscarCliente')); ?>  
                 </div>
-<!--                <div class="form-group">
-                    <div class="col-lg-1 col-md-2 col-sm-3">
-                        <label for="email1" class="control-label">Documento Pago</label>
-                    </div>
-                    <div class="col-lg-3 col-md-4 col-sm-5">
-                        <?php // echo $this->formElement($form->get('file-documentoPago')); ?>   
-                        <p class="help-block">Escanee el documento de pago.</p>
-                    </div>
-
-                </div>-->
                 <div class="row">
 
                     <div class="col-lg-12">
@@ -150,7 +145,8 @@ if ($this->numeroPedido != null) {
                                             <tr>
                                                 <th>#</th>
                                                 <th>Producto</th>
-                                                <th>Cantidad</th>
+                                                <th class="col-md-1">Stock Actual</th>
+                                                <th class="col-md-2">Cantidad</th>
                                                 <th>Valor Venta</th>
                                                 <th></th>
                                             </tr>
@@ -172,5 +168,4 @@ if ($this->numeroPedido != null) {
             </div>
         </div><!--end .box -->
     </div><!--end .col-lg-12 -->
-
 </div>
