--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -72,7 +72,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="header-navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li><a target="_blank" href="<?php echo $this->basePath() ?>/client"><i class="fa fa-desktop"></i></a></li>
+                        <li><a target="_blank" href="<?php echo $this->basePath() ?>/"><i class="fa fa-desktop"></i></a></li>
                     </ul><!--end .nav -->
                     <ul class="nav navbar-nav navbar-right">
                         <li><span class="navbar-devider"></span></li>
